Finally fixed alignment problems with #Telehealth
Needed to use flexboxes

--- a/styles.css
+++ b/styles.css
@@ -223,32 +223,21 @@ p {
   align-self: center;
 }
 
-.tframe{
-  width: 75%;
-  vertical-align: middle;
-  margin-top: -10%;
-  margin-bottom: -10%;
-
-  /*text-align: center;
-  display: table-cell;*/
+.tele-text {
+  padding: 0 100px;
+  /*margin-top: 5%;*/
+  /*margin-bottom: 5%;*/
 }
 
-.tframe img{
-  max-width: 100%;
-  max-height: 100%;
-  display:block;
-  margin: 20%;
+.tele-pic{
+  max-width: 80%;
 }
 
 .tour-video {
   /*  padding: 2% 0 0 0; */
 }
 
-.tele-text {
-  padding: 50px 100px;
-  margin-top: 5%;
-  margin-bottom: 5%;
-}
+
 
 .card-body{
   margin: 5% auto;
